--- a/Parcial Termodinámica Nicolás Botero Díaz.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,11 +473,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p4 = 6 #presion en bares del nitrogeno\n",
+    "p1_4 = 6 #presion en bares del nitrogeno\n",
     "temp_nitro = 177 #Temperatura en °C del nitrogeno\n",
     "vol_nitro = 0.05 #Volumen del nitrogeno en metros cubicos\n",
     "i_politro = 2 #indice politropio\n",
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -495,28 +495,127 @@
       "text/markdown": [
        "### Solución\n",
        "\n",
-       "Del enunciado obtenemos los datos $P_1= 6 bar$, $T_1 = 177 °C$, $V_1 = 0.05 m^3$ y $P_2 = 1.5 bar$\n",
+       "Del enunciado obtenemos los datos $P_1= 6 bar$, $T_1 = 177 °C$, $V_1 = 0.05 m^3$ y $P_2 = 1.5bar$\n",
        "\n",
        "$$T_1=177 °C + 273 °K= 450°K$$\n",
        "el $V_2$ se halla de la siguiente forma al ser un proceso politrópico\n",
+       "\n",
+       "$$P_1V_1^n =P_2V_2^n$$\n",
+       "$$\\sqrt[n]{V_2^n} =\\sqrt [n]{\\frac{P_1}{P_2}V_1^n}$$\n",
+       "$$V_2=V_1(\\frac{P_1}{P_2})^{\\frac{1}{n}}$$\n",
+       "$$V_2=0.05 m^3(\\frac {6 bar}{1.5 bar})^{\\frac{1}{2}}$$\n",
+       "$$V_2=0.1 m^3$$\n",
+       "\n",
+       "Ahora, R para el nitrógeno es $0.2968 \\frac{kJ}{kg °K}$\n",
+       "\n",
+       "Con esto, ya se puede hallar la masa de la suguiente forma\n",
+       "\n",
+       "$$P_1V_1 = mRT_1$$\n",
+       "$$m = \\frac{P_1V_1}{RT_1} =\\frac{(6 bar)(0.05 m^3)}{(0.2968 \\frac {kJ}{kg*°K})(450 °K)} (\\frac{100KPas}{1bar})$$\n",
+       "$$m = 0.225kg$$\n",
+       "\n",
+       "C) Luego, se calcula la $T_2$ de la siguiente manera.\n",
+       "\n",
+       "$$P_2V_2 = mRT_2$$\n",
+       "$$T_2 = \\frac {P_2V_2}{mR} = \\frac{(1.5 bar)(0.1 m^3)}{(0.225kg)(0.2968 \\frac{kJ}{kg*°K})}(\\frac{100kPas}{1bar})$$\n",
+       "$$T_2=224.618°K$$\n",
+       "\n",
+       "Ya habiendo hallado todos los datos necesario se pueden responder las incognitas inicales.\n",
+       "\n",
+       "A) sabiendo que $P_1 = 600 kPas$ y que en un proceso politrópico el trabajo se calcula de la siguiente manera:\n",
+       "\n",
+       "$$W = \\frac{P_2V_2 - P_1V_1}{1-n}$$\n",
+       "\n",
+       "$$W = \\frac{(150.0kPas)(0.1m^3) - (600kPas)(0.05m^3)}{1-2}$$\n",
+       "\n",
+       "con ello, el trabajo realizado durante el proceso es de \n",
+       "\n",
+       "$$W = 15.0kJ$$\n",
+       "\n",
+       "B) Aplicando la primera ley se obtine\n",
+       "\n",
+       "$$\\Delta U = Q - W = 5kJ - 15.0kJ = -10.0 kJ$$\n",
+       "\n",
        "         \n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "r = 0.2968\n",
+    "\n",
+    "r0 = temp_nitro+273  #T1= 450°K\n",
+    "r1 = vol_nitro*((p1_4/p_final_nitro))**(1/2)  #v2 = 0.1 m³\n",
+    "r2 = round(((p1_4*vol_nitro)/(r*r0))*(100/1),res) #m = 0.225kg\n",
+    "r3 = round(((p_final_nitro*r1)/(r*r2))*(100/1),res) #T2 = 225°K\n",
+    "r4 = round(p_final_nitro*100,res) #pfinal = 150kP\n",
+    "r5 = round(p1_4*100,res) #p1 = 600kP\n",
+    "r6 = round((r4*r1-r5*vol_nitro)/(1-i_politro),res) #W=15kJ\n",
+    "\n",
+    "\n",
+    "f0 = '\\\\sqrt[n]{V_2^n} =\\\\sqrt [n]{\\\\frac{P_1}{P_2}V_1^n}'\n",
+    "f1 = 'V_1(\\\\frac{P_1}{P_2})^{\\\\frac{1}{n}}'\n",
+    "f2 = '%s m^3(\\\\frac {%s bar}{%s bar})^{\\\\frac{1}{2}}'%(vol_nitro, p1_4,p_final_nitro)\n",
+    "f3 = '\\\\frac{kJ}{kg °K}'\n",
+    "f4 = '\\\\frac{P_1V_1}{RT_1} =\\\\frac{(%s bar)(%s m^3)}{(%s \\\\frac {kJ}{kg*°K})(%s °K)} (\\\\frac{100KPas}{1bar})'%(p1_4, vol_nitro,r,r0)\n",
+    "f5 = '\\\\frac {P_2V_2}{mR} = \\\\frac{(%s bar)(%s m^3)}{(%skg)(%s \\\\frac{kJ}{kg*°K})}(\\\\frac{100kPas}{1bar})'%(p_final_nitro,r1,r2,r)\n",
+    "f6 = '\\\\frac{P_2V_2 - P_1V_1}{1-n}'\n",
+    "f7 = '\\\\frac{(%skPas)(%sm^3) - (%skPas)(%sm^3)}{1-%s}'%(r4,r1,r5,vol_nitro,i_politro)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "Markdown(f'''### Solución\n",
     "\n",
-    "Del enunciado obtenemos los datos $P_1= 6 bar$, $T_1 = 177 °C$, $V_1 = 0.05 m^3$ y $P_2 = 1.5 bar$\n",
+    "Del enunciado obtenemos los datos $P_1= {p1_4} bar$, $T_1 = {temp_nitro} °C$, $V_1 = {vol_nitro} m^3$ y $P_2 = {p_final_nitro}bar$\n",
     "\n",
-    "$$T_1=177 °C + 273 °K= 450°K$$\n",
+    "$$T_1={temp_nitro} °C + 273 °K= {r0}°K$$\n",
     "el $V_2$ se halla de la siguiente forma al ser un proceso politrópico\n",
+    "\n",
+    "$$P_1V_1^n =P_2V_2^n$$\n",
+    "$${f0}$$\n",
+    "$$V_2={f1}$$\n",
+    "$$V_2={f2}$$\n",
+    "$$V_2={r1} m^3$$\n",
+    "\n",
+    "Ahora, R para el nitrógeno es ${r} {f3}$\n",
+    "\n",
+    "Con esto, ya se puede hallar la masa de la suguiente forma\n",
+    "\n",
+    "$$P_1V_1 = mRT_1$$\n",
+    "$$m = {f4}$$\n",
+    "$$m = {r2}kg$$\n",
+    "\n",
+    "C) Luego, se calcula la $T_2$ de la siguiente manera.\n",
+    "\n",
+    "$$P_2V_2 = mRT_2$$\n",
+    "$$T_2 = {f5}$$\n",
+    "$$T_2={r3}°K$$\n",
+    "\n",
+    "Ya habiendo hallado todos los datos necesario se pueden responder las incognitas inicales.\n",
+    "\n",
+    "A) sabiendo que $P_1 = {p1_4*100} kPas$ y que en un proceso politrópico el trabajo se calcula de la siguiente manera:\n",
+    "\n",
+    "$$W = {f6}$$\n",
+    "\n",
+    "$$W = {f7}$$\n",
+    "\n",
+    "con ello, el trabajo realizado durante el proceso es de \n",
+    "\n",
+    "$$W = {r6}kJ$$\n",
+    "\n",
+    "B) Aplicando la primera ley se obtine\n",
+    "\n",
+    "$$\\Delta U = Q - W = {calor}kJ - {r6}kJ = {calor-r6} kJ$$\n",
+    "\n",
     "         \n",
     "''')"
    ]
@@ -842,18 +941,6 @@
     "<img src=\"https://github.com/JCardenas05/T1/blob/main/Tabla9.png?raw=true\" style=\"width: 700px; height: 400px; display: block; margin: 0 auto; text-align: center;\">\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "hola perro"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -872,7 +959,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
