--- a/Parcial Termodinámica Nicolás Botero Díaz.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz.ipynb
@@ -673,6 +673,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 2) Seguridad en la industria"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Evaluación Cuantitativa de Riesgos\n",
     "\n",
     "En la Evaluación Cuantitativa de Riesgos, se utilizan índices y cálculos específicos para determinar la magnitud del riesgo en una ubicación determinada. Esto implica evaluar el Riesgo Individual Específico de Ubicación (LSIR), que representa la probabilidad anual de muerte o lesiones graves para una persona en las cercanías de una amenaza. \n",
