--- a/Parcial Termodinámica Nicolás Botero Díaz.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz.ipynb
@@ -665,7 +665,7 @@
     "\n",
     "B) Aplicando la primera ley se obtine\n",
     "\n",
-    "$$\\Delta U = Q - W = 5kJ - 15kJ = 10 kJ$$\n",
+    "$$\\Delta U = Q - W = 5kJ - 15kJ = - 10 kJ$$\n",
     "\n"
    ]
   },
