--- a/Parcial Termodinámica Nicolás Botero Díaz.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,29 +235,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Solución\n",
-    "Para los procesos isobáricos se puede emplear la ley de Charles que establece qué: \n",
-    "\n",
-    "$$\\frac{V_1}{T_1} = \\frac{V_2}{T_2}$$\n",
-    "\n",
-    "Teniendo en cuanta lo anterior convertimos las temperaturas a °K para tener valores absolutos.\n",
-    "\n",
-    "$$T_1 = 27 °C + 273 °K = 300 °K$$\n",
-    "$$T_2 = (400 + 27)  °C + 273 °K = 700 °K$$\n",
-    "\n",
-    "Ahora, despejando el $V_2$ y sabiendo que $V_1 = 30 L$ se obtine:\n",
-    "\n",
-    "$$V_2 = \\frac{V_1T_2}{T_1} = \\frac{(30L) (700°K) }{300 °K} = 70 L$$\n",
-    "\n",
-    "Con ello, la variación es: \n",
-    "\n",
-    "$$\\Delta V = V_2 - V_1 = 70L - 30L = 40L$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### - Proceso Isotérmico\n",
     "\n",
     "Calcule el trabajo total, en KJ, producido por el proceso isotérmico de la figura cuando el sistema consiste de 3 kg de oxígeno.\n",
@@ -267,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +295,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,40 +343,6 @@
     "$${f0}$$\n",
     "$${f2}$$\n",
     "''')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Solución \n",
-    "\n",
-    "Se asume que se trabaja en un sistema cerrado por lo que, la masa es constante. también como es un proceso isotérmico la temperatuna es constante.\n",
-    "\n",
-    "Aplicando la ley de los gases ideales se obtiene:\n",
-    "\n",
-    "$$PV = nRT \\rightarrow nRT=C \\rightarrow PV = C \\rightarrow P_1V_1=P_2V_2$$\n",
-    "\n",
-    "Sabiendo esto y teniendo en cuanta que el trabajo total se calcula \n",
-    "\n",
-    "$$W_b = \\int^{V_2}_{V_1} PdV$$ \n",
-    "\n",
-    "como se determinó que $PV = C$, despejando y remplazando en la integral se obtiene el siguiente resultado\n",
-    "\n",
-    "$$W_b = \\int^{V_2}_{V_1} \\frac {C}{V}dV = C \\int^{V_2}_{V_1} \\frac {dV}{V}$$\n",
-    "\n",
-    "$$W_b = C [Ln (V)]^{V_2}_{V_1} = C [Ln(V_2) - Ln(V_1)] = C Ln (\\frac{V_2}{V_1})$$\n",
-    "\n",
-    "Lo que es igual empleando uno de los despejes hallados anteriormente.\n",
-    "\n",
-    "$$ P_2V_2 Ln (\\frac{P_1}{P_2})$$\n",
-    "\n",
-    "Teniendo en cuenta que tenemos el volumen específico se puede despejar de la siguiente manera.\n",
-    "\n",
-    "$$\\hat V _2 = \\frac {V_2}{n} = V_2 = n\\hat V _2 \\rightarrow W_b = nP_2 \\hat V _2 Ln (\\frac{P_1}{P_2})$$\n",
-    "\n",
-    "$$W_b = (3kg)(600kPas)(0.2\\frac{m^3}{kg})(Ln(\\frac{200}{600})$$\n",
-    "$$W_b = (-395.5kPas*m^3) \\frac{1kJ}{1kPas*m^3} = -395.5kJ$$"
    ]
   },
   {
@@ -473,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +485,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +545,7 @@
     "\n",
     "Ya habiendo hallado todos los datos necesario se pueden responder las incognitas inicales.\n",
     "\n",
-    "A) sabiendo que $P_1 = {p1_4*100} kPas$ y que en un proceso politrópico el trabajo se calcula de la siguiente manera:\n",
+    "A) sabiendo que $P_1 = {r5} kPas$ y que en un proceso politrópico el trabajo se calcula de la siguiente manera:\n",
     "\n",
     "$$W = {f6}$$\n",
     "\n",
