--- a/Parcial Termodinámica Nicolás Botero Díaz.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz.ipynb
@@ -18,7 +18,8 @@
    "metadata": {},
    "source": [
     "# Primer punto \n",
-    "### - Proceso Isocórico"
+    "### - Proceso Isocórico\n",
+    "- [Referencia del ejercicio 1](https://www.youtube.com/watch?v=H7SU6Qg6Ggo)\n"
    ]
   },
   {
@@ -48,13 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "Como se tiene un gas ideal monoatómico en condiciones normales, se asume que la temperatura 1 ( $T_1$ ) es de 273 °K y la presión 1 ( $P_1$ ) es de 1 atm.  \n",
+       "Como se tiene un gas ideal monoatómico en condiciones normales, se asume que la temperatura 1 ( $T_1$ ) es de 273 °K y la presión 1 ( $P_1$ ) es de 200 atm.  \n",
        "\n",
        "Al este ser un proceso isocórico se obtiene el volumen 2 ( $V_2$ )  \n",
        "$$V_1 = V_2 = 5 L$$  \n",
@@ -65,10 +66,10 @@
        "A) Como es un proceso isocórico se halla la masa atómica ($n$) en el primer estado que será igual a la del último.\n",
        "\n",
        "$$P_1V_1 = n_1RT_1$$\n",
-       "$$n_1 = \\frac{P_{1} V_{1}}{R T_{1}} = \\frac{(1 atm)(5 L)}{(0.0820 \\frac{1*atm*L}{°K*mol})(273 °K)} = 0.2234 mol$$\n",
+       "$$n_1 = \\frac{P_{1} V_{1}}{R T_{1}} = \\frac{(200 atm)(5 L)}{(0.2968 \\frac{1*atm*L}{°K*mol})(273 °K)} = 12.3417 mol$$\n",
        "$$n_1 = n_2 = n$$\n",
        "Se escoge $R$ correspondiente a las unidades en las que se expresó la presión para un apropiado despeje.  \n",
-       "$$P_2=  \\frac{nRT_2}{V_2} = \\frac{0.2234 mol(0.0820 \\frac{1*atm*L}{°K*mol})(873 °K)}{5 L} = 3.1978 atm$$  \n",
+       "$$P_2=  \\frac{nRT_2}{V_2} = \\frac{12.3417 mol(0.2968 \\frac{1*atm*L}{°K*mol})(873 °K)}{5 L} = 639.5604 atm$$  \n",
        "\n",
        "B)\n",
        "$$W = \\int P dV \\rightarrow W= 0$$\n",
@@ -76,15 +77,15 @@
        "C)\n",
        "$$\\Delta U = nC_vdT + (\\frac{\\delta U}{\\delta V})dV$$\n",
        "sabiendo que para un gas ideal $(\\frac{\\delta U}{\\delta V})$ es cero y $C_v = \\frac {3}{2}R$\n",
-       "$$\\Delta U = nC_v(T_2 - T_1) = (0.2234 mol) (\\frac {3}{2} 1.987 \\frac{cal}{°K*mol})(873 - 273)°K$$\n",
-       "$$\\Delta U = 399.4237 cal$$\n",
+       "$$\\Delta U = nC_v(T_2 - T_1) = (12.3417 mol) (\\frac {3}{2} 1.987 \\frac{cal}{°K*mol})(873 - 273)°K$$\n",
+       "$$\\Delta U = 22070.5844 cal$$\n",
        "\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,10 +112,6 @@
     "f9 = '\\\\Delta U = nC_v(T_2 - T_1) = (%.4f mol) (\\\\frac {3}{2} 1.987 \\\\frac{cal}{°K*mol})(%s - 273)°K'%(r1,r0)\n",
     "f10 = '\\\\Delta U = %.4f cal'% r3\n",
     "\n",
-    "\n",
-    "\n",
-    "# Ahora puedes usar latex_expression en tu documento Markdown\n",
-    "#Markdown(f\"#### Hola ${latex_expression}$\")\n",
     "\n",
     "Markdown(f'''Como se tiene un gas ideal monoatómico en condiciones normales, se asume que la temperatura 1 ( $T_1$ ) es de 273 °K y la presión 1 ( $P_1$ ) es de {p1} atm.  \n",
     "\n",
@@ -149,6 +146,7 @@
    "metadata": {},
    "source": [
     "### - Proceso Isobárico\n",
+    "- [Referencia del ejercicio 2](https://www.youtube.com/watch?v=g-pSHQABt6Y)\n",
     "\n",
     "30 litros de un gas se encuentran a 27 °C. Si la temperatura aumenta en 400 °C isobáricamente. \n",
     "\n",
@@ -157,11 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v2 = 30 #Voluemn del gas en litros\n",
+    "v2 = 30 #Volumen del gas en litros\n",
     "temp_v2 = 27 #Temperatura del gas\n",
     "aumento = 400  #aumento de la temperatura"
    ]
@@ -430,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +483,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,11 +508,6 @@
     "f5 = '\\\\frac {P_2V_2}{mR} = \\\\frac{(%s bar)(%s m^3)}{(%skg)(%s \\\\frac{kJ}{kg*°K})}(\\\\frac{100kPas}{1bar})'%(p_final_nitro,r1,r2,r)\n",
     "f6 = '\\\\frac{P_2V_2 - P_1V_1}{1-n}'\n",
     "f7 = '\\\\frac{(%skPas)(%sm^3) - (%skPas)(%sm^3)}{1-%s}'%(r4,r1,r5,vol_nitro,i_politro)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "Markdown(f'''### Solución\n",
     "\n",
@@ -561,55 +554,6 @@
     "\n",
     "         \n",
     "''')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Solución\n",
-    "\n",
-    "Del enunciado obtenemos los datos $P_1= 6 bar$, $T_1 = 177 °C$, $V_1 = 0.05 m^3$ y $P_2 = 1.5 bar$\n",
-    "\n",
-    "$$T_1=177 °C + 273 °K= 450°K$$\n",
-    "el $V_2$ se halla de la siguiente forma al ser un proceso politrópico\n",
-    "\n",
-    "$$P_1V_1^n =P_2V_2^n$$\n",
-    "$$\\sqrt[n]{V_2^n} =\\sqrt [n]{\\frac{P_1}{P_2}V_1^n} $$\n",
-    "$$V_2 = V_1(\\frac{P_1}{P_2})^{\\frac{1}{n}}$$\n",
-    "$$V_2 = 0.05 m^3(\\frac {6 bar}{1.5 bar})^{\\frac{1}{2}}$$\n",
-    "$$V_2=0.1 m^3$$\n",
-    "\n",
-    "Ahora, R para el nitrógeno es $0.2968 \\frac{kJ}{kg °K}$\n",
-    "\n",
-    "Con esto, ya se puede hallar la masa de la suguiente forma\n",
-    "\n",
-    "$$P_1V_1 = mRT_1$$\n",
-    "$$m = \\frac{P_1V_1}{RT_1} =\\frac{(6 bar)(0.05 m^3)}{(0.2968 \\frac {kJ}{kg*°K})(450 °K)} (\\frac{100KPas}{1bar})$$\n",
-    "$$m = 0.225kg$$\n",
-    "\n",
-    "C) Luego, se calcula la $T_2$ de la sifuiente manera.\n",
-    "\n",
-    "$$P_2V_2 = mRT_2$$\n",
-    "$$T_2 = \\frac {P_2V_2}{mR} = \\frac{(1.5 bar)(0.1 m^3)}{(0.225kg)(0.2968 \\frac{kJ}{kg*°K})}(\\frac{100kPas}{1bar})$$\n",
-    "$$T_2=225°K$$\n",
-    "\n",
-    "Ya habiendo hallado todos los datos necesario se pueden responder las incognitas inicales.\n",
-    "\n",
-    "A) sabiendo que $P_1 = 600 kPas$ y que en un proceso politrópico el trabajo se calcula de la siguiente manera:\n",
-    "\n",
-    "$$W = \\frac{P_2V_2 - P_1V_1}{1-n}$$\n",
-    "\n",
-    "$$W = \\frac{(150kPas)(0.1m^3) - (600kPas)(0.05m^3)}{1-2}$$\n",
-    "\n",
-    "con ello, el trabajo realizado durante el proceso es de \n",
-    "\n",
-    "$$W = 15kJ$$\n",
-    "\n",
-    "B) Aplicando la primera ley se obtine\n",
-    "\n",
-    "$$\\Delta U = Q - W = 5kJ - 15kJ = - 10 kJ$$\n",
-    "\n"
    ]
   },
   {
