--- a/Parcial Termodinámica Nicolás Botero Díaz.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,10 +413,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vol1 = 64\n",
+    "pres1 = 4\n",
+    "pres2 = 128\n",
+    "alpha = 5/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "### Solución\n",
+       "En los procesos isotrópico no hay flujo de calor, El calor no ingresa ni sale en el proceso $Q = 0$\n",
+       "Con ello, de acuerdo a la primera ley de la termodinámica se obtine:\n",
+       "\n",
+       "$$Q = W + \\Delta U ; Q = 0$$\n",
+       "$$W = -\\Delta U$$\n",
+       "\n",
+       "Y sabiendo que la constante isotrópica o adiabática en este caso se puede hallar como:\n",
+       "\n",
+       "$$P_1V_1^\\alpha =P_2V_2^\\alpha$$\n",
+       "\n",
+       "$$\\alpha = \\frac{i+2}{i}$$\n",
+       "\n",
+       "donde i es el tipo de gas que se trabaja y como el neon es monoatómico i es 3.\n",
+       "\n",
+       "con lo que:\n",
+       "\n",
+       "$$\\alpha = \\frac{3 + 2}{3} = \\frac{5}{3}$$\n",
+       "\n",
+       "Para este ejercicio $V_1 = 64 L$, $P_1 = 4 Pas$, $P_2= 128Pas$\n",
+       "\n",
+       "Reemplazando se tiene que:\n",
+       "\n",
+       "$$(4Pas)(64L)^{\\frac{5}{3}}=(128Pas)(V_2)^{\\frac{5}{3}}$$\n",
+       "$$V_2^{\\frac{5}{3}}=\\frac{(4Pas)(64L)^{\\frac{5}{3}}}{128Pas}$$\n",
+       "$$V_2 = \\sqrt[5]{(\\frac{(4Pas)(64L)^{\\frac{5}{3}}}{128Pas})}^3 = 322.54L$$\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x0 = 'Q = W + \\\\Delta U ; Q = 0'\n",
+    "r0 = 'W = -\\\\Delta U'\n",
+    "r1 = 'P_1V_1^\\\\alpha =P_2V_2^\\\\alpha'\n",
+    "r2 = '\\\\alpha = \\\\frac{i+2}{i}'\n",
+    "r3 = '\\\\alpha = \\\\frac{3 + 2}{3} = \\\\frac{5}{3}'\n",
+    "r4 = '(%sPas)(%sL)^{\\\\frac{5}{3}}=(%sPas)(V_2)^{\\\\frac{5}{3}}'%(pres1,vol1,pres2)\n",
+    "r5 = 'V_2^{\\\\frac{5}{3}}='\n",
+    "r6 = '\\\\frac{(%sPas)(%sL)^{\\\\frac{5}{3}}}{%sPas}'%(pres1,vol1,pres2)\n",
+    "\n",
+    "f0 = round(((pres1*(vol1**alpha))/pres2)**alpha,res)\n",
+    "f1 = 'V_2 = \\\\sqrt[5]{(%s)}^3 = %sL'%(r6,f0)\n",
+    "\n",
+    "Markdown(f'''### Solución\n",
+    "En los procesos isotrópico no hay flujo de calor, El calor no ingresa ni sale en el proceso $Q = 0$\n",
+    "Con ello, de acuerdo a la primera ley de la termodinámica se obtine:\n",
+    "\n",
+    "$${x0}$$\n",
+    "$${r0}$$\n",
+    "\n",
+    "Y sabiendo que la constante isotrópica o adiabática en este caso se puede hallar como:\n",
+    "\n",
+    "$${r1}$$\n",
+    "\n",
+    "$${r2}$$\n",
+    "\n",
+    "donde i es el tipo de gas que se trabaja y como el neon es monoatómico i es 3.\n",
+    "\n",
+    "con lo que:\n",
+    "\n",
+    "$${r3}$$\n",
+    "\n",
+    "Para este ejercicio $V_1 = {vol1} L$, $P_1 = {pres1} Pas$, $P_2= {pres2}Pas$\n",
+    "\n",
+    "Reemplazando se tiene que:\n",
+    "\n",
+    "$${r4}$$\n",
+    "$${r5}{r6}$$\n",
+    "$${f1}$$\n",
+    "''')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -448,7 +539,7 @@
     "$$(4Pas)(64L)^{\\frac{5}{3}}=(128Pas)(V_2)^{\\frac{5}{3}}$$\n",
     "$$V_2^{\\frac{5}{3}}=\\frac{(4Pas)(64L)^{\\frac{5}{3}}}{128Pas}$$\n",
     "$$V_2^{\\frac{5}{3}}=\\frac{(2^2Pas)(2^6L)^{\\frac{5}{3}}}{2^7Pas}$$\n",
-    "$$V_2^{\\frac{5}{3}}=\\frac{(2^2Pas)(2^10L)}{2^7Pas}$$\n",
+    "$$V_2^{\\frac{5}{3}}=\\frac{(2^2Pas)(2^{10}L)}{2^7Pas}$$\n",
     "$$V_2^{\\frac{5}{3}}=2^5 L $$\n",
     "$$V_2 = \\sqrt[5]{(2^5 L)}^3 = 8L$$"
    ]
@@ -473,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +1057,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
