--- a/Parcial Termodinámica Nicolás Botero Díaz.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz.ipynb
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -456,13 +456,13 @@
        "\n",
        "$$(4Pas)(64L)^{\\frac{5}{3}}=(128Pas)(V_2)^{\\frac{5}{3}}$$\n",
        "$$V_2^{\\frac{5}{3}}=\\frac{(4Pas)(64L)^{\\frac{5}{3}}}{128Pas}$$\n",
-       "$$V_2 = \\sqrt[5]{(\\frac{(4Pas)(64L)^{\\frac{5}{3}}}{128Pas})}^3 = 322.54L$$\n"
+       "$$V_2 = \\sqrt[5]{(\\frac{(4Pas)(64L)^{\\frac{5}{3}}}{128Pas})}^3 = 8.0L$$\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
     "r5 = 'V_2^{\\\\frac{5}{3}}='\n",
     "r6 = '\\\\frac{(%sPas)(%sL)^{\\\\frac{5}{3}}}{%sPas}'%(pres1,vol1,pres2)\n",
     "\n",
-    "f0 = round(((pres1*(vol1**alpha))/pres2)**alpha,res)\n",
+    "f0 = round(((pres1*(vol1**alpha))/pres2)**(3/5),res)\n",
     "f1 = 'V_2 = \\\\sqrt[5]{(%s)}^3 = %sL'%(r6,f0)\n",
     "\n",
     "Markdown(f'''### Solución\n",
