--- a/Parcial Termodinámica Nicolás Botero Díaz.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz.ipynb
@@ -242,7 +242,7 @@
     "\n",
     "Calcule el trabajo total, en KJ, producido por el proceso isotérmico de la figura cuando el sistema consiste de 3 kg de oxígeno.\n",
     "\n",
-    "<img src=\"https://github.com/JCardenas05/T1/blob/main/grap1.jpeg?raw=true\" style=\"width: 400px; height: 300px; display: block; margin: 0 auto; text-align: center;\">\n"
+    "<img src=\"grap1.jpeg\" style=\"width: 400px; height: 300px; display: block; margin: 0 auto; text-align: center;\">\n"
    ]
   },
   {
