--- a/Parcial Termodinámica Nicolás Botero Díaz.ipynb
+++ b/Parcial Termodinámica Nicolás Botero Díaz.ipynb
@@ -871,7 +871,7 @@
     "El sulfuro de hidrógeno se libera de las dos unidades siguientes a la frecuencia dada, y\n",
     "las nubes de gas llegan a las zonas ocupadas por las personas identificadas. Calcular los índices de riesgo.\n",
     "\n",
-    "<img src=\"https://github.com/JCardenas05/T1/blob/main/Tabla1.png?raw=true\" style=\"width: 700px; height: 200px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "<img src=\"Tabla1.png\" style=\"width: 700px; height: 200px; display: block; margin: 0 auto; text-align: center;\">\n",
     "\n",
     "Ecuación Probit para el sulfuro de hidrógeno (ppm, min) (Van den Bosch, Duijm, Yellow Book, 2005):\n",
     "\n",
@@ -882,8 +882,8 @@
     "- $Pr2A = -10.833752 + ln(1100 ^{1.9} * 6) = 4.2$     (12.13)\n",
     "- $Pr2B = -10.833752 + ln(1400 ^{1.9} * 9) = 5.1$     (12.14)\n",
     "\n",
-    "<img src=\"https://github.com/JCardenas05/T1/blob/main/Tabla2.png?raw=true\" style=\"width: 700px; height: 850px; display: block; margin: 0 auto; text-align: center;\">\n",
-    "<img src=\"https://github.com/JCardenas05/T1/blob/main/Tabla3.png?raw=true\" style=\"width: 700px; height: 850px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "<img src=\"Tabla2.png\" style=\"width: 700px; height: 850px; display: block; margin: 0 auto; text-align: center;\">\n",
+    "<img src=\"Tabla3.png\" style=\"width: 700px; height: 850px; display: block; margin: 0 auto; text-align: center;\">\n",
     "\n",
     "\n",
     "- $LSIR_1 = 3.1 * 10^{-5} +2.2 * 10^{-5}= 5.3 \\times 10^{-5} y^{-1}$ (12.15)\n",
